--- a/web/src/main/webapp/app/account/friends/friends.component.html
+++ b/web/src/main/webapp/app/account/friends/friends.component.html
@@ -31,7 +31,8 @@
                     <tbody>
                     <tr *ngFor="let friend of friends">
                         <td><span class="font-thin h4 padder"><a href="" class="thumb-sm m-r-sm avatar">
-                                    <img src="b10.jpg" alt="...">
+                                    <img *ngIf="!friend.imageUrl" src="b10.jpg" alt="...">
+                                    <img *ngIf="friend.imageUrl" src="{{friend.imageUrl}}" alt="...">
                                 </a>{{friend.firstAndLastName}}</span></td>
                         <td><span><button *ngIf="!friend.followedByCurrent" class="m-l-xs btn btn-rounded btn-success" (click)="follow(friend.id)" >Follow</button><button *ngIf="friend.followedByCurrent" class="m-l-xs btn btn-info btn-rounded " (click)="unfollow(friend.id)" >Unfollow</button></span></td>
                     </tr>
