--- a/web/src/main/webapp/app/account/register/register.component.html
+++ b/web/src/main/webapp/app/account/register/register.component.html
@@ -49,6 +49,50 @@
                         </small>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="form-control-label" for="firstName" jhiTranslate="global.form.firstName">First name</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName" #firstName="ngModel"
+                           placeholder="{{'global.form.firstName.placeholder' | translate}}"
+                           [(ngModel)]="registerAccount.firstName" minlength=3 maxlength=100 required>
+                    <div *ngIf="firstName.dirty && firstName.invalid">
+                        <small class="form-text text-danger" *ngIf="firstName.errors.required"
+                               jhiTranslate="global.messages.validate.firstName.required">
+                            Your name is required.
+                        </small>
+                        <small class="form-text text-danger" *ngIf="firstName.errors.minlength"
+                               jhiTranslate="global.messages.validate.firstName.minlength">
+                            Your name is required to be at least 3 characters.
+                        </small>
+                        <small class="form-text text-danger" *ngIf="firstName.errors.maxlength"
+                               jhiTranslate="global.messages.validate.firstName.maxlength">
+                            Your name cannot be longer than 100 characters.
+                        </small>
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label class="form-control-label" for="surname" jhiTranslate="global.form.lastName">Last name</label>
+                    <input type="text" class="form-control" id="surname" name="surname" #surname="ngModel"
+                           placeholder="{{'global.form.surname.placeholder' | translate}}"
+                           [(ngModel)]="registerAccount.surname" minlength=3 maxlength=100 required>
+                    <div *ngIf="surname.dirty && surname.invalid">
+                        <small class="form-text text-danger" *ngIf="name.errors.required"
+                               jhiTranslate="global.messages.validate.surname.required">
+                            Your surname is required.
+                        </small>
+                        <small class="form-text text-danger" *ngIf="name.errors.minlength"
+                               jhiTranslate="global.messages.validate.name.minlength">
+                            Your surname is required to be at least 3 characters.
+                        </small>
+                        <small class="form-text text-danger" *ngIf="name.errors.maxlength"
+                               jhiTranslate="global.messages.validate.name.maxlength">
+                            Your surname cannot be longer than 100 characters.
+                        </small>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label class="form-control-label" for="email" jhiTranslate="global.form.email">Email</label>
                     <input type="email" class="form-control" id="email" name="email" #email="ngModel"
