add activity enhancment

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -10,7 +10,6 @@
             <div class="wrapper b-b">
                 <h3 class="m-n font-thin" jhiTranslate="timeline.manual.title">Add Activity</h3>
             </div>
-            <ngb-timepicker [(ngModel)]="time" [meridian]="ON"></ngb-timepicker>
 
             <div class="wrapper">
                 <form novalidate [formGroup]="addActivityForm" (ngSubmit)="submitActivity()" class="form-validation">
@@ -31,7 +30,7 @@
                         <label>Date & Time</label>
                         <div class="form-inline">
 
-                            <ngb-timepicker formControlName="time" [meridian]="ON"></ngb-timepicker>
+                            <ngb-timepicker formControlName="time"></ngb-timepicker>
 
                             <div class="">
                                 <ng-datepicker formControlName="startDate" class=""></ng-datepicker>
