--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -90,11 +90,11 @@
                                    name="distance" class="form-control col-sm-6"
                                    placeholder="Distance..."
                                    formControlName="distance">
-                            <select class="form-control col-sm-6" formControlName="units">
-                                <option>km</option>
-                                <option>m</option>
-                                <option>miles</option>
-                                <option>yards</option>
+                            <select class="input-sm form-control col-sm-6" formControlName="units">
+                                <option value="km">km</option>
+                                <option value="m">m</option>
+                                <option value="miles">miles</option>
+                                <option value="yards">yards</option>
                             </select>
                         </div>
                     </div>
