--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -36,13 +36,6 @@
                                 <ng-datepicker formControlName="startDate" class=""></ng-datepicker>
                             </div>
 
-                            <!--<select class="form-control" formControlName="time">-->
-                                <!--<option value="0">00:00AM</option>-->
-                                <!--<option value="0.5">00:30AM</option>-->
-                                <!--<option value="1">01:00AM</option>-->
-                            <!--</select>-->
-
-
                             <span class="m-b-none padder"
                                   *ngIf="addActivityForm.dirty && addActivityForm.controls.time.errors?.required">
                             This field is required
@@ -64,29 +57,34 @@
                         </span>
                     </div>
 
-                    <div formGroupName="duration">
+                    <div class="form-group">
                         <label>Duration</label>
-                        <div class="form-group ">
-                            <div class=" input-group">
-                                <input type="number" class="form-control col-sm-8" formControlName="hours">
-                                <span class="input-group-addon col-sm-4">hours</span>
 
-                            </div>
-                            <div class="input-group">
-                                <input type="number" class="form-control col-sm-8" formControlName="minutes">
-                                <span class=" input-group-addon col-sm-4">min</span>
-                            </div>
-                            <div class=" input-group ">
-                                <input type="number" class="form-control col-sm-8" formControlName="seconds">
-                                <span class=" input-group-addon col-sm-4">sec</span>
-                            </div>
-                        </div>
+                        <ngb-timepicker formControlName="duration" [seconds]=true></ngb-timepicker>
+
+
+                        <!--<div class="form-group ">-->
+                            <!--<div class=" input-group">-->
+                                <!--<input type="number" class="form-control col-sm-8" formControlName="hours">-->
+                                <!--<span class="input-group-addon col-sm-4">hours</span>-->
+
+                            <!--</div>-->
+                            <!--<div class="input-group">-->
+                                <!--<input type="number" class="form-control col-sm-8" formControlName="minutes">-->
+                                <!--<span class=" input-group-addon col-sm-4">min</span>-->
+                            <!--</div>-->
+                            <!--<div class=" input-group ">-->
+                                <!--<input type="number" class="form-control col-sm-8" formControlName="seconds">-->
+                                <!--<span class=" input-group-addon col-sm-4">sec</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
 
                     <div class="form-group">
                         <label>Distance</label>
                         <div class="form-inline">
                             <input type="number"
+                                   min="0"
                                    name="distance" class="form-control col-sm-6"
                                    placeholder="Distance..."
                                    formControlName="distance">
