--- a/web/src/main/webapp/app/home/home.component.html
+++ b/web/src/main/webapp/app/home/home.component.html
@@ -1,17 +1,14 @@
 <div class="tech-background">
-    <div class="padder-v">
-        <div class="container m-b-xxl text-center">
-            <div class="row no-gutter">
-                <div class="m-t-xxl m-b-xxl text-center">
-                    <h1 class="font-bold l-h-1x m-t-xxl text-black padder-v animated fadeInDown">
-                        Nie pozwól swoim marzeniom odbiec za daleko
-                    </h1>
-                    <h3 class="text-muted m-t-xl l-h-1x">
-                        Sportowa aplikacja mobilna, platforma komunikacyjna i edukacyjna wellness, dla amatorów
-                        i
-                        profesjonalistów
-                    </h3>
-                </div>
+    <div class="text-center">
+        <div class="padder-v">
+            <div class="m-t-xxl m-b-xxl">
+                <h1 class="font-bold l-h-1x m-t-xxl text-black "
+                    jhiTranslate="home.motto">
+                    Don’t let your dreams RUN away
+                </h1>
+                <h3 class="text-muted m-t-xl l-h-1x" jhiTranslate="home.subtitle">Wellness and educational platform for
+                    amateurs and professionals
+                </h3>
             </div>
         </div>
     </div>
@@ -20,8 +17,8 @@
             <div class=""><p class=" m-b-xxl wrapper">
                 <a href=""
                    target="_blank"
-                   class="btn b-2x btn-lg b-black btn-default btn-rounded text-lg font-bold m-b-xxl animated fadeInUpBig">Czym
-                    jest Athletic ?
+                   class="btn b-2x btn-lg b-black btn-default btn-rounded text-lg font-bold m-b-xxl animated fadeInUpBig"
+                   jhiTranslate="home.question">Czym jest Athletic ?
                 </a>
             </p>
             </div>
