--- a/web/src/main/webapp/app/home/home.component.html
+++ b/web/src/main/webapp/app/home/home.component.html
@@ -18,8 +18,7 @@
                 <a href=""
                    target="_blank"
                    class="btn b-2x btn-lg b-black btn-default btn-rounded text-lg font-bold m-b-xxl animated fadeInUpBig"
-                   jhiTranslate="home.question">Czym jest Athletic ?
-                </a>
+                   jhiTranslate="home.question">What is Athletic ?</a>
             </p>
             </div>
         </div>
@@ -30,11 +29,8 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="bg-light m-r-n-md no-m-xs no-m-sm">
                         <a href="../angular" class="wrapper-xl block">
-                            <span class="h3 m-t-sm text-black">Integracja</span>
-                            <span class="block m-b-md m-t">Zintegruj swoje wyniki z ulubionych aplikacji sportowych w jednym miejscu. Komunikacja m.in. ze Stravą i Garminem.
-Efektywnie planowanie, zarządzanie i analiza treningów.
-
-                            </span>
+                            <span class="h3 m-t-sm text-black" jhiTranslate="home.integration.title">Integracja</span>
+                            <span class="block m-b-md m-t" jhiTranslate="home.integration.details">Connect your favourite sport apps on a single platform. It will help you to manage a tailored training plan, progres and all other activities in the most effective and while still using your favourite apps like Strava, MapMyfitness or Endomondo and many more. </span>
                             <i class="icon-arrow-right text-lg"></i>
                         </a>
                     </div>
@@ -42,11 +38,8 @@ Efektywnie planowanie, zarządzanie i analiza treningów.
                 <div class="col-md-3 col-sm-6">
                     <div class="bg-black dker m-t-xl m-l-n-md m-r-n-md text-white no-m-xs no-m-sm">
                         <a href="../html" class="wrapper-xl block">
-                            <span class="h3 m-t-sm text-white">Rezultaty</span>
-                            <span class="block m-b-md m-t">Korzystaj z ogromnej bazy planów treningowych i dietetycznych.
-Wybór celu,  zaplanowanie treningu i diety, oraz monitorowanie postępu. Możliwość zamówienia wizyty u dietetyka, trenera personalnego lub fizjoterapeuty.
-
-</span>
+                            <span class="h3 m-t-sm text-white" jhiTranslate="home.features.title">Features</span>
+                            <span class="block m-b-md m-t" jhiTranslate="home.features.details">Get access to a wide knowledge base for trainings, diet and  goals planning.  Keep track of your progress in an innovative way thanks to a real-time & self-learning monitoring module. Scheduling an appointment with a dietitian, physiotherapist or training coach has never been that easy !</span>
                             <i class="icon-arrow-right text-lg"></i>
                         </a>
                     </div>
@@ -54,10 +47,8 @@ Wybór celu,  zaplanowanie treningu i diety, oraz monitorowanie postępu. Możli
                 <div class="col-md-3 col-sm-6">
                     <div class="bg-light dker m-t-n m-l-n-md m-r-n-md no-m-xs no-m-sm">
                         <a href="../angular/#music/home" class="wrapper-xl block">
-                            <span class="h4 m-t-sm text-black">Zabawa</span>
-                            <span class="block m-b-md m-t">Bierz udział w rozmaitych wydarzeniach sportowych i wellness lub bądź ich twórcą. Platforma komunikacyjna AthleteSpot pozwoli na sprawne zarządzanie treningami, tworzenie i udział w wydarzeniach oraz dzielenie się wiedzą
-
-</span>
+                            <span class="h4 m-t-sm text-black" jhiTranslate="home.fun.title">Fun</span>
+                            <span class="block m-b-md m-t" jhiTranslate="home.fun.details">Have all the fun activities, benefits, programs, tools and events your organization offers in one place. AthleticSpot(R)  is single and personalized user platform that makes it easy to market relevant programs, corporate challenges and benefits more efficiently, and allows your employees to be creative.</span>
                             <i class="icon-arrow-right text-lg"></i>
                         </a>
                     </div>
@@ -65,11 +56,8 @@ Wybór celu,  zaplanowanie treningu i diety, oraz monitorowanie postępu. Możli
                 <div class="col-md-3 col-sm-6">
                     <div class="bg-white dker m-t m-l-n-md m-r-n-md no-m-xs no-m-sm">
                         <a href="../angular/material.html" class="wrapper-xl block">
-                            <span class="h3 m-t-sm text-black">Benefity</span>
-                            <span class="block m-b-md m-t">Rozbudowany system benefitów za aktywność
-każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na nagrody rzeczowe lub finansowe.
-
-</span>
+                            <span class="h3 m-t-sm text-black" jhiTranslate="home.benefits.title">Benefits</span>
+                            <span class="block m-b-md m-t" jhiTranslate="home.fun.details">Provide your employees with a transparent rewarding program that enables to plan their goals and benefits, making it all even more attractive and fun !</span>
                             <i class="icon-arrow-right text-lg"></i>
                         </a>
                     </div>
@@ -89,11 +77,8 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
                     <i class="fa w-1x fa-google"></i>
                 </p>
                 <div class="m-b-xl">
-                    <h4 class="m-t-none">Wybierz swój cel</h4>
-                    <p class="text-muted m-t-lg">Wybierz wyzwanie, a indywidualnie dopasowany program treningowy i
-                        dietetyczny i monitorowanie postępu pozwoli Ci przygotować się w optymalny sposób do celu i
-                        osiągnąć wymarzony rezultat.
-                    </p>
+                    <h4 class="m-t-none" jhiTranslate="home.goals.title">Goals and challenges</h4>
+                    <p class="text-muted m-t-lg" jhiTranslate="home.goals.details">Submit for a race or any other wellness challenge, while our interactive coach will ensure you are well prepared, through a balanced training program and diet. </p>
                 </div>
             </div>
             <div class="col-sm-3" data-ride="animated" data-animation="fadeInLeft" data-delay="600">
@@ -101,11 +86,8 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
                     <i class="fa w-1x fa-gears"></i>
                 </p>
                 <div class="m-b-xl">
-                    <h4 class="m-t-none">Korzystaj z AthleticSpot</h4>
-                    <p class="text-muted m-t-lg">Wejdź na platformę komunikacyjną AthleteSpot - bądź na bierząco,
-                        organizuj i dołączaj do wydarzeń, dziel się doświadczeniem i korzystaj z doświadczenia
-                        innych
-                    </p>
+                    <h4 class="m-t-none" jhiTranslate="home.platform.title">All-in-one wellness platform</h4>
+                    <p class="text-muted m-t-lg" jhiTranslate="home.platform.details">AthleticSpot(R) integrate your data from various sport/wellness apps at one place, allowing you a better management of your training results, and goals planning.</p>
                 </div>
             </div>
             <div class="col-sm-3" data-ride="animated" data-animation="fadeInLeft" data-delay="900">
@@ -113,8 +95,8 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
                     <i class="fa w-1x fa-clock-o"></i>
                 </p>
                 <div class="m-b-xl">
-                    <h4 class="m-t-none">Dołącz do rywalizacji</h4>
-                    <p class="text-muted m-t-lg">Sprawdź kalendarz wydarzeń sportowych i dołącz do rywalizacji</p>
+                    <h4 class="m-t-none" jhiTranslate="home.community.title">Community</h4>
+                    <p class="text-muted m-t-lg" jhiTranslate="home.community.details">Build a wellness community inside your firm</p>
                 </div>
             </div>
             <div class="col-sm-3" data-ride="animated" data-animation="fadeInLeft" data-delay="900">
@@ -122,11 +104,8 @@ każda aktywność, nie tylko sportowa, jest przeliczana na punkty, a punkty na 
                     <i class="fa w-1x fa-clock-o"></i>
                 </p>
                 <div class="m-b-xl">
-                    <h4 class="m-t-none">Umów się na konsultację</h4>
-                    <p class="text-muted m-t-lg">Chcesz skorzystać z konsultacji z fizjoterapeutą, dietetykiem lub z
-                        trenerem personalnym ? Wybierz najdogodniejszą lokalizację i termin wśród specjalistów
-                        dostępnych na terenie całej Polski.
-                    </p>
+                    <h4 class="m-t-none" jhiTranslate="home.planner.title">Meeting planner</h4>
+                    <p class="text-muted m-t-lg" jhiTranslate="home.planner.details">Schedule an appointment with a doctor, trainer, physiotherapist or dietist.  Online, or stationary.</p>
                 </div>
             </div>
         </div>
