sport activity write controller clean up

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -85,14 +85,13 @@
                         <div class="form-inline">
                             <input type="number"
                                    min="0"
+                                   step="0.1"
                                    name="distance" class="form-control col-sm-6"
                                    placeholder="Distance..."
                                    formControlName="distance">
                             <select class="input-sm form-control col-sm-6" formControlName="units">
-                                <option value="km">km</option>
-                                <option value="m">m</option>
-                                <option value="miles">miles</option>
-                                <option value="yards">yards</option>
+                                <option value="km">kilometers</option>
+                                <option value="mi">miles</option>
                             </select>
                         </div>
                     </div>
