--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -83,11 +83,11 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Description</label>
+                        <label jhiTranslate="timeline.manual.comment">Put a comment</label>
                         <input
                             type="text"
                             formControlName="description"
-                            placeholder="Add description..."
+                            placeholder="{{ 'timeline.manual.comment' | translate }}..."
                             class="input-sm form-control">
                     </div>
 
