--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -11,7 +11,7 @@
                 <h3 class="m-n font-thin" jhiTranslate="timeline.manual.title">Add Activity</h3>
             </div>
 
-            <div class="wrapper">
+            <div class="wrapper" [ngSwitch]="isMetric()">
                 <form novalidate [formGroup]="addActivityForm" (ngSubmit)="submitActivity()" class="form-validation">
                     <div class="form-group">
                         <label>Title</label>
@@ -92,7 +92,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Max Speed</label>
+                        <label>Max Speed <span *ngSwitchCase="true">[km/h]</span><span *ngSwitchCase="false">[mi/h]</span></label>
                         <input
                             type="number"
                             min="0"
@@ -102,7 +102,7 @@
                             class="input-sm form-control">
                     </div>
                     <div class="form-group">
-                        <label>Average Speed</label>
+                        <label>Average Speed <span *ngSwitchCase="true">[km/h]</span><span *ngSwitchCase="false">[mi/h]</span></label>
                         <input
                             type="number"
                             min="0"
