--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -188,7 +188,7 @@
                                                 <div class="col-sm-4 text-dark ">
                                                     <p class="m-xxs text-sm">Avg speed:</p>
                                                     <p class="text-lg m-xxs">
-                                                        {{activity.averageSpeed}}
+                                                        {{activity.averageSpeed}} <span *ngIf="activity.averageSpeed">{{activity.units}}/h</span>
                                                     </p>
                                                 </div>
                                             </div>
