add pace to sport activity out dto

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -186,9 +186,9 @@
                                                     </p>
                                                 </div>
                                                 <div class="col-sm-4 text-dark ">
-                                                    <p class="m-xxs text-sm">Avg speed:</p>
+                                                    <p class="m-xxs text-sm">Pace:</p>
                                                     <p class="text-lg m-xxs">
-                                                        {{activity.averageSpeed}} <span *ngIf="activity.averageSpeed">{{activity.units}}/h</span>
+                                                        {{activity.formattedPace}} <span *ngIf="activity.formattedPace">/{{activity.units}}</span>
                                                     </p>
                                                 </div>
                                             </div>
