--- a/web/src/main/webapp/app/timeline/strava/strava.component.html
+++ b/web/src/main/webapp/app/timeline/strava/strava.component.html
@@ -1,6 +1,8 @@
-<div>
-    <div class="hbox hbox-auto-xs hbox-auto-sm"></div>
-    <div class="wrapper b-b">
-        <h3 class="m-n font-thin">Strava success</h3>
-    </div>
+<div class="m-t-xxl m-b-xxl ">
+    <h3 class="m-xl font-bold text-center">Strava synchronization successful</h3>
+
+    <a class="logo logo-img" routerLink="/" >
+        <img style="width: 100%; height: 100%" src="athleticspot.png" alt="...">
+    </a>
+
 </div>
