--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -50,6 +50,32 @@
                             <option value="RUN">Running</option>
                             <option value="RIDE">Riding</option>
                             <option value="SWIM">Swimming</option>
+                            <option value="HIKE">Hike</option>
+                            <option value="WALK">Walk</option>
+                            <option value="ALPINE_SKI">Alpine ski</option>
+                            <option value="BACKCOUNTRY_SKI">Backcountry ski</option>
+                            <option value="CANOEING">Canoeing</option>
+                            <option value="CROSSFIT">Crossfit</option>
+                            <option value="EBIKE_RIDE">Ebike ride</option>
+                            <option value="ELLIPTICAL">Elliptical</option>
+                            <option value="ICE_SKATE">Ice skate</option>
+                            <option value="INLINE_SKATE">Inline skate</option>
+                            <option value="KAYAKING">Kayaking</option>
+                            <option value="KITESURF">Kitesurf</option>
+                            <option value="NORDIC_SKI">Nordic ski</option>
+                            <option value="ROCK_CLIMBING">Rock climbing</option>
+                            <option value="ROLLERSKI">Rollerski</option>
+                            <option value="ROWING">Rowing</option>
+                            <option value="SNOWBOARD">Snowboard</option>
+                            <option value="STAIR_STEPPER">Stair stepper</option>
+                            <option value="STAND_UP_PADDLING">Stand up paddling</option>
+                            <option value="SURFING">Surfing</option>
+                            <option value="VIRTUAL_RIDE">Virtual ride</option>
+                            <option value="WEIGHT_TRAINING">Weight training</option>
+                            <option value="WINDSURF">Windsurf</option>
+                            <option value="WORKOUT">Workout</option>
+                            <option value="YOGA">Yoga</option>
+                            <option value="UNKNOWN">Unknown</option>
                         </select>
                         <span class="m-b-none padder"
                               *ngIf="addActivityForm.dirty && addActivityForm.controls.sportActivityType.errors?.required">
