Additional sport activities types

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -47,7 +47,7 @@
                     <div class="form-group">
                         <label>Type</label>
                         <select class="input-sm form-control" formControlName="sportActivityType">
-                            <option value="RUN">Running</option>
+                            <option value="RUN" jhiTranslate="timeline.manual.type.running">Running</option>
                             <option value="RIDE">Riding</option>
                             <option value="SWIM">Swimming</option>
                             <option value="HIKE">Hike</option>
