Additional sport activities types

--- a/web/src/main/webapp/app/timeline/activities/activities.component.html
+++ b/web/src/main/webapp/app/timeline/activities/activities.component.html
@@ -47,35 +47,35 @@
                     <div class="form-group">
                         <label>Type</label>
                         <select class="input-sm form-control" formControlName="sportActivityType">
-                            <option value="RUN" jhiTranslate="timeline.manual.type.running">Running</option>
-                            <option value="RIDE">Riding</option>
-                            <option value="SWIM">Swimming</option>
-                            <option value="HIKE">Hike</option>
-                            <option value="WALK">Walk</option>
-                            <option value="ALPINE_SKI">Alpine ski</option>
-                            <option value="BACKCOUNTRY_SKI">Backcountry ski</option>
-                            <option value="CANOEING">Canoeing</option>
-                            <option value="CROSSFIT">Crossfit</option>
-                            <option value="EBIKE_RIDE">Ebike ride</option>
-                            <option value="ELLIPTICAL">Elliptical</option>
-                            <option value="ICE_SKATE">Ice skate</option>
-                            <option value="INLINE_SKATE">Inline skate</option>
-                            <option value="KAYAKING">Kayaking</option>
-                            <option value="KITESURF">Kitesurf</option>
-                            <option value="NORDIC_SKI">Nordic ski</option>
-                            <option value="ROCK_CLIMBING">Rock climbing</option>
-                            <option value="ROLLERSKI">Rollerski</option>
-                            <option value="ROWING">Rowing</option>
-                            <option value="SNOWBOARD">Snowboard</option>
-                            <option value="STAIR_STEPPER">Stair stepper</option>
-                            <option value="STAND_UP_PADDLING">Stand up paddling</option>
-                            <option value="SURFING">Surfing</option>
-                            <option value="VIRTUAL_RIDE">Virtual ride</option>
-                            <option value="WEIGHT_TRAINING">Weight training</option>
-                            <option value="WINDSURF">Windsurf</option>
-                            <option value="WORKOUT">Workout</option>
-                            <option value="YOGA">Yoga</option>
-                            <option value="UNKNOWN">Unknown</option>
+                            <option value="RUN" jhiTranslate="timeline.manual.type.RUN">Running</option>
+                            <option value="RIDE" jhiTranslate="timeline.manual.type.RIDE">Riding</option>
+                            <option value="SWIM" jhiTranslate="timeline.manual.type.SWIM">Swimming</option>
+                            <option value="HIKE" jhiTranslate="timeline.manual.type.HIKE">Hike</option>
+                            <option value="WALK" jhiTranslate="timeline.manual.type.WALK">Walk</option>
+                            <option value="ALPINE_SKI" jhiTranslate="timeline.manual.type.ALPINE_SKI">Alpine ski</option>
+                            <option value="BACKCOUNTRY_SKI" jhiTranslate="timeline.manual.type.BACKCOUNTRY_SKI">Backcountry skiing</option>
+                            <option value="CANOEING" jhiTranslate="timeline.manual.type.CANOEING">Canoeing</option>
+                            <option value="CROSSFIT" jhiTranslate="timeline.manual.type.CROSSFIT">Crossfit</option>
+                            <option value="EBIKE_RIDE" jhiTranslate="timeline.manual.type.EBIKE_RIDE">Ebike ride</option>
+                            <option value="ELLIPTICAL" jhiTranslate="timeline.manual.type.ELLIPTICAL">Elliptical</option>
+                            <option value="ICE_SKATE" jhiTranslate="timeline.manual.type.ICE_SKATE">Ice skate</option>
+                            <option value="INLINE_SKATE" jhiTranslate="timeline.manual.type.INLINE_SKATE">Inline skate</option>
+                            <option value="KAYAKING" jhiTranslate="timeline.manual.type.KAYAKING">Kayaking</option>
+                            <option value="KITESURF" jhiTranslate="timeline.manual.type.KITESURF">Kitesurf</option>
+                            <option value="NORDIC_SKI" jhiTranslate="timeline.manual.type.NORDIC_SKI">Nordic ski</option>
+                            <option value="ROCK_CLIMBING" jhiTranslate="timeline.manual.type.ROCK_CLIMBING">Rock climbing</option>
+                            <option value="ROLLERSKI" jhiTranslate="timeline.manual.type.ROLLERSKI">Rollerski</option>
+                            <option value="ROWING" jhiTranslate="timeline.manual.type.ROWING">Rowing</option>
+                            <option value="SNOWBOARD" jhiTranslate="timeline.manual.type.SNOWBOARD">Snowboard</option>
+                            <option value="STAIR_STEPPER" jhiTranslate="timeline.manual.type.STAIR_STEPPER">Stair stepper</option>
+                            <option value="STAND_UP_PADDLING" jhiTranslate="timeline.manual.type.STAND_UP_PADDLING">Stand up paddling</option>
+                            <option value="SURFING" jhiTranslate="timeline.manual.type.SURFING">Surfing</option>
+                            <option value="VIRTUAL_RIDE" jhiTranslate="timeline.manual.type.VIRTUAL_RIDE">Virtual ride</option>
+                            <option value="WEIGHT_TRAINING" jhiTranslate="timeline.manual.type.WEIGHT_TRAINING">Weight training</option>
+                            <option value="WINDSURF" jhiTranslate="timeline.manual.type.WINDSURF">Windsurf</option>
+                            <option value="WORKOUT" jhiTranslate="timeline.manual.type.WORKOUT">Workout</option>
+                            <option value="YOGA" jhiTranslate="timeline.manual.type.YOGA">Yoga</option>
+                            <option value="UNKNOWN" jhiTranslate="timeline.manual.type.UNKNOWN">Unknown</option>
                         </select>
                         <span class="m-b-none padder"
                               *ngIf="addActivityForm.dirty && addActivityForm.controls.sportActivityType.errors?.required">
