--- a/web/src/main/webapp/app/account/settings/settings.component.html
+++ b/web/src/main/webapp/app/account/settings/settings.component.html
@@ -98,6 +98,14 @@
                         </option>
                     </select>
                 </div>
+                <div class="form-group" *ngIf="languages && languages.length > 0">
+                    <label for="langKey" jhiTranslate="settings.form.language">Language</label>
+                    <select class="form-control" id="measureTypeKey" name="langKey" [(ngModel)]="settingsAccount.langKey">
+                        <option *ngFor="let language of languages" [value]="language">{{language |
+                            findLanguageFromKey}}
+                        </option>
+                    </select>
+                </div>
                 <button type="submit" [disabled]="settingsForm.form.invalid" class="btn btn-primary"
                         jhiTranslate="settings.form.button">Save
                 </button>
