--- a/web/src/main/webapp/app/account/settings/settings.component.html
+++ b/web/src/main/webapp/app/account/settings/settings.component.html
@@ -98,9 +98,9 @@
                         </option>
                     </select>
                 </div>
-                <div class="form-group" *ngIf="languages && languages.length > 0">
-                    <label for="langKey" jhiTranslate="settings.form.language">Language</label>
-                    <select class="form-control" id="measureTypeKey" name="langKey" [(ngModel)]="settingsAccount.langKey">
+                <div class="form-group">
+                    <label for="measureTypeKey" jhiTranslate="settings.form.units">Units & Measurements</label>
+                    <select class="form-control" id="measureTypeKey" name="measureTypeKey" [(ngModel)]="settingsAccount.langKey">
                         <option *ngFor="let language of languages" [value]="language">{{language |
                             findLanguageFromKey}}
                         </option>
